<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AlbumFormActivity">

    <include layout="@layout/action_bar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAlbumTitle"
            android:layout_marginTop="70dp"
            android:textSize="19sp"
            android:textColor="#000000"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/albums_new" />

        <EditText
            android:id="@+id/editTextAlbumName"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#ECEFF1"
            android:layout_marginBottom="15dp"
            android:paddingHorizontal="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/album_name" />

        <EditText
            android:id="@+id/editTextAlbumReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#ECEFF1"
            android:layout_marginBottom="15dp"
            android:paddingHorizontal="12dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/album_release_date" />

        <EditText
            android:id="@+id/editTextAlbumDescription"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#ECEFF1"
            android:layout_marginBottom="15dp"
            android:paddingHorizontal="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/album_description" />

        <EditText
            android:id="@+id/editTextAlbumGenre"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#ECEFF1"
            android:layout_marginBottom="15dp"
            android:paddingHorizontal="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/album_genre" />

        <EditText
            android:id="@+id/editTextAlbumCover"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#ECEFF1"
            android:layout_marginBottom="15dp"
            android:paddingHorizontal="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/album_cover" />

        <EditText
            android:id="@+id/editTextAlbumRecordLabel"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#ECEFF1"
            android:paddingHorizontal="12dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/album_record_label" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:text="@string/album_create" />

    </LinearLayout>
</FrameLayout>


<!--<string name="album_name">Nombre del Album</string>-->
<!--<string name="album_description">Descripción</string>-->
<!--<string name="album_release_date">Fecha de Lanzamiento</string>-->
<!--<string name="album_genre">Genero</string>-->
<!--<string name="album_record_label">Etiqueta</string>-->