<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/lyCollectorItem"
        android:layout_height="250dp"
        android:layout_width="350dp"
        app:cardCornerRadius="18dp">

        <ImageView
            android:id="@+id/ivCollectorCover"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="60dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/descriptionCollectorList" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/album_border"
            android:orientation="horizontal"
            android:layout_gravity="bottom">
            <ImageView
                android:id="@+id/ivCollectorDescription"
                android:src="@drawable/play_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitEnd"
                android:contentDescription="@string/descriptionCollector" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_gravity="top">



                <TextView
                    android:id="@+id/tvCollectorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/CollectorName" />

                <TextView
                    android:id="@+id/tvCollectorPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_secondary"
                    android:layout_marginStart="5dp"
                    android:textSize="12sp"
                    android:text="@string/CollectorTelephone" />

                <TextView
                    android:id="@+id/tvCollectorEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_secondary"
                    android:layout_marginStart="5dp"
                    android:textSize="12sp"
                    android:text="@string/CollectorEmail" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>

