<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/itemInputTrack"
    tools:keep="@layout/item_input_track">

    <androidx.cardview.widget.CardView
        android:id="@+id/lyCoverImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etTrackName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_de_la_cancion"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="LabelFor,TextContrastCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/duraci_n_de_la_canci_n"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/minutos"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etMinutes"
                    android:layout_width="37dp"
                    android:layout_height="48dp"
                    android:digits="0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15"
                    android:gravity="center"
                    android:hint="@string/_0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:background="@color/input_background"
                    android:textColor="@color/text_secondary"
                    android:textSize="18sp"
                    app:counterEnabled="true"
                    app:counterMaxLength="2"
                    tools:ignore="LabelFor,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/tvSegs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/segundos"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etSeconds"
                    android:layout_width="39dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:background="@color/input_background"
                    android:textColor="@color/text_secondary"
                    android:hint="@string/_00"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="18sp"
                    app:counterEnabled="true"
                    app:counterMaxLength="2"
                    tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

