<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
<!--    Comments-->

    <androidx.cardview.widget.CardView
        android:id="@+id/lyCollectorItem"
        android:layout_width="350dp"
        android:layout_height="94dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="15dp">

        <FrameLayout
            android:id="@+id/commentsCollector"
            android:layout_width="330dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button_footer_navigation">

            <TextView
                android:id="@+id/titleComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/comments"
                android:textColor="@color/primary"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/descriptionComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/descriptions"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="332dp" />

            <TextView
                android:id="@+id/personComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/ranking"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="332dp" />

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="65dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1" />


        </FrameLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>